--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,69 @@
-body{
-    font-size: 12px;
-    -ms-layout-grid: 1440px;
-    background-color: white hsl(0,0%,100%)
-    lightgray hsl(212,45%,89%)
-    grayishblue hsl(220, 15%, 55%)
-    darkblue hsl(218,44%,22%);
-    font-family: 'Outfit' , sans-serif;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Outfit", sans-serif;
     
-
-   
-}
-
-
-h4{
+  }
+  :root {
+    --white: hsl(0, 0%, 100%);
+    --light-gray: hsl(212, 45%, 89%);
+    --grayish-blue: hsl(220, 15%, 55%);
+    --dark-blue: hsl(218, 44%, 22%);
+  }
+  body {
+    background-color: var(--light-gray);
+    align-items: center;
+    padding-top: 8%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+  }
+  .QR {
+    background-color: var(--white);
+    margin: 20px;
+    text-align: center;
+    border-radius: 15px;
+    width: 315px;
+    height: auto;
+    padding: 5px;
+    font-size: 15px;
+  }
+  .QR:hover {
+    box-shadow: 12px 7px 20px 6px rgb(57 75 84 / 8%);
+    transform: scale(1.025);
+  }
+  img {
+    width: 93%;
+    margin: 3%;
+    border-radius: 10px;
+    height: auto;
+    justify-content: center;
+  }
+  img:hover {
+    box-shadow: 12px 7px 20px 6px rgb(57 75 84 / 8%);
+    cursor: pointer;
+    transform: scale(1.025);
+  }
+  h1 {
+    color: var(--dark-blue);
+    margin: 15px;
+    font-weight: 700;
+  }
+  p {
+    color: var(--grayish-blue);
+    margin: 8%;
+    font-weight: 400;
+  }
+  
+  .attribution {
     font-size: 11px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-   
-}
+    text-align: center;
+    margin: 100px 35px 0 35px;
+    flex-shrink: 0;
+  }
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+    text-decoration: none;
+  }
